--- a/TaskAssessor/TaskAssessor.csproj
+++ b/TaskAssessor/TaskAssessor.csproj
@@ -173,13 +173,24 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712061328111_FirstMigration.cs" />
+    <Compile Include="Migrations\201712061328111_FirstMigration.Designer.cs">
+      <DependentUpon>201712061328111_FirstMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712061344294_AddedJobModel.cs" />
+    <Compile Include="Migrations\201712061344294_AddedJobModel.Designer.cs">
+      <DependentUpon>201712061344294_AddedJobModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Job.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -245,6 +256,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201712061328111_FirstMigration.resx">
+      <DependentUpon>201712061328111_FirstMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712061344294_AddedJobModel.resx">
+      <DependentUpon>201712061344294_AddedJobModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
