--- a/TaskAssessor/TaskAssessor.csproj
+++ b/TaskAssessor/TaskAssessor.csproj
@@ -181,8 +181,13 @@
     <Compile Include="Migrations\201712061344294_AddedJobModel.Designer.cs">
       <DependentUpon>201712061344294_AddedJobModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712061353374_AddedHourInterval.cs" />
+    <Compile Include="Migrations\201712061353374_AddedHourInterval.Designer.cs">
+      <DependentUpon>201712061353374_AddedHourInterval.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\HourInterval.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Job.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -263,6 +268,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712061344294_AddedJobModel.resx">
       <DependentUpon>201712061344294_AddedJobModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712061353374_AddedHourInterval.resx">
+      <DependentUpon>201712061353374_AddedHourInterval.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
