Added all crud operations and views plus Datepicker with jqueryui

--- a/TaskAssessor/TaskAssessor.csproj
+++ b/TaskAssessor/TaskAssessor.csproj
@@ -213,6 +213,14 @@
     <Compile Include="Migrations\201712081437244_UpdatedHourIntervalModel.Designer.cs">
       <DependentUpon>201712081437244_UpdatedHourIntervalModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712130836233_UpdatedHourInterval.cs" />
+    <Compile Include="Migrations\201712130836233_UpdatedHourInterval.Designer.cs">
+      <DependentUpon>201712130836233_UpdatedHourInterval.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712130839597_UpdatedHourInterval1.cs" />
+    <Compile Include="Migrations\201712130839597_UpdatedHourInterval1.Designer.cs">
+      <DependentUpon>201712130839597_UpdatedHourInterval1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\HourInterval.cs" />
@@ -335,6 +343,8 @@
     <Content Include="Views\MyJobs\Index.cshtml" />
     <Content Include="Views\MyJobs\CreateMyJob.cshtml" />
     <Content Include="Views\MyJobs\New.cshtml" />
+    <Content Include="Views\MyJobs\Details.cshtml" />
+    <Content Include="Views\MyJobs\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -375,6 +385,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712081437244_UpdatedHourIntervalModel.resx">
       <DependentUpon>201712081437244_UpdatedHourIntervalModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712130836233_UpdatedHourInterval.resx">
+      <DependentUpon>201712130836233_UpdatedHourInterval.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712130839597_UpdatedHourInterval1.resx">
+      <DependentUpon>201712130839597_UpdatedHourInterval1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
