--- a/TaskAssessor/TaskAssessor.csproj
+++ b/TaskAssessor/TaskAssessor.csproj
@@ -52,12 +52,24 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -167,7 +179,9 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\APIs\APIController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HourIntervalsController.cs" />
     <Compile Include="Controllers\JobsController.cs" />
@@ -221,11 +235,26 @@
     <Compile Include="Migrations\201712130839597_UpdatedHourInterval1.Designer.cs">
       <DependentUpon>201712130839597_UpdatedHourInterval1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801091138046_AddedValidation_HourInterval.cs" />
+    <Compile Include="Migrations\201801091138046_AddedValidation_HourInterval.Designer.cs">
+      <DependentUpon>201801091138046_AddedValidation_HourInterval.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801091153187_AddedValidation_HourInterval1.cs" />
+    <Compile Include="Migrations\201801091153187_AddedValidation_HourInterval1.Designer.cs">
+      <DependentUpon>201801091153187_AddedValidation_HourInterval1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801091156285_AddedValidation_HourInterval1.0.cs" />
+    <Compile Include="Migrations\201801091156285_AddedValidation_HourInterval1.0.Designer.cs">
+      <DependentUpon>201801091156285_AddedValidation_HourInterval1.0.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CustomValidations\GreaterThanStarted.cs" />
     <Compile Include="Models\HourInterval.cs" />
+    <Compile Include="Models\HourIntervalDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Job.cs" />
+    <Compile Include="Models\CustomValidations\LessThanEnded.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -391,6 +420,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712130839597_UpdatedHourInterval1.resx">
       <DependentUpon>201712130839597_UpdatedHourInterval1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801091138046_AddedValidation_HourInterval.resx">
+      <DependentUpon>201801091138046_AddedValidation_HourInterval.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801091153187_AddedValidation_HourInterval1.resx">
+      <DependentUpon>201801091153187_AddedValidation_HourInterval1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801091156285_AddedValidation_HourInterval1.0.resx">
+      <DependentUpon>201801091156285_AddedValidation_HourInterval1.0.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
